force-app/main/default/objects/Quote/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Mirrors Account.Industry on the Quote so QuoteLineItem validation rules can reference industry-based product eligibility without needing 2-hop cross-object traversal.</description>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>