force-app/main/default/objects/Quote/fields/Approval_Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>Approval_Tier_Label__c</fullName>
    <description>Auto-computed approval tier label based on Discount: 20-30% = Tier 1 (Sales Manager), 30-50% = Tier 2 (Finance Director), 50%+ = Tier 3 (VP Sales). Used in approval emails so the recipient sees which deal-desk tier this quote escalated to.</description>
    <formula>IF(Discount &gt; 0.50, "Tier 3 - VP Sales Approval",
IF(Discount &gt; 0.30, "Tier 2 - Finance Director Approval",
IF(Discount &gt; 0.20, "Tier 1 - Sales Manager Approval",
"Auto-Approved (under 20%)")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Tier Label</label>
    <type>Text</type>
</CustomField>