force-app/main/default/objects/Quote/fields/Estimated_VAT_19_Percent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_VAT_19_Percent__c</fullName>
    <description>Estimated VAT (19% German rate) calculated as TotalPrice * 0.19. Display-only formula — actual tax will be computed by the tax engine on the related Invoice.</description>
    <formula>TotalPrice * 0.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated VAT at 19% (German rate). Final tax computed at invoice generation.</inlineHelpText>
    <label>Estimated VAT (19%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>