force-app/main/default/objects/Quote/fields/Total_With_Estimated_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Estimated_VAT__c</fullName>
    <description>Total Price with estimated 19% VAT included. Display-only formula.</description>
    <formula>TotalPrice * 1.19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price including estimated VAT at 19%.</inlineHelpText>
    <label>Total with Estimated VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>